<resources>
    <string name="app_name">1718023</string>
    <string name="action_setting_language">Language</string>
    <string name="label_setting_locale_summary">Change device language</string>
    <string name="label_setting_locale_title">Change language</string>
    <string name="key_setting_locale">setting_locale</string>
    <string name="action_notification">Settings</string>
</resources>
